# TimeLapse

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu-2004-cmake.yml  ubuntu-2204-cmake.yml  ubuntu-2404-cmake.yml  ubuntu-cmake.yml
CMakeMod/: FindExif.cmake  FindGPHOTO2.cmake  FindV4L.cmake  FindVidStab.cmake
src/: CMakeLists.txt  black_hole_device.cpp  black_hole_device.h  capture.cpp  error_message_helper.h  input_image_info.cpp  input_image_info.h  libvidstab.h  magick_utils.h  pipeline.cpp  pipeline.h  pipeline_cpt.cpp  pipeline_cpt.h  pipeline_cpt_gphoto2.cpp  pipeline_cpt_gphoto2.h  pipeline_cpt_qcamera.cpp  pipeline_cpt_qcamera.h  pipeline_cpt_v4l.cpp  pipeline_cpt_v4l.h  pipeline_deflicker.cpp  pipeline_deflicker.h  pipeline_effects.cpp  pipeline_effects.h  pipeline_frame_mapping.cpp  pipeline_frame_mapping.h  pipeline_frame_prepare.cpp  pipeline_frame_prepare.h  pipeline_handler.cpp  pipeline_handler.h  pipeline_resize_frame.cpp  pipeline_resize_frame.h  pipeline_source.cpp  pipeline_source.h  pipeline_stab.cpp  pipeline_stab.h  pipeline_video_assembly.cpp  pipeline_video_assembly.h  pipeline_write_frame.cpp  pipeline_write_frame.h  scope_log.h  (+12 more)
src/TimeLapse/: black_hole_device.h  capture.h  error_message_helper.h  input_image_info.h  libvidstab.h  pipeline.h  pipeline_cpt.h  pipeline_cpt_gphoto2.h  pipeline_cpt_qcamera.h  pipeline_cpt_v4l.h  pipeline_deflicker.h  pipeline_frame_mapping.h  pipeline_frame_prepare.h  pipeline_handler.h  pipeline_resize_frame.h  pipeline_source.h  pipeline_stab.h  pipeline_video_assembly.h  pipeline_write_frame.h  scope_log.h  timelapse.h
test/: CMakeLists.txt
